# angular-bazel-example

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  README.md  WORKSPACE  angular-metadata.tsconfig.json  angular.json  angular.tsconfig.json  bundle.sh  docker.bazelrc  firebase.json  index.html  package-lock.json  package.json  package.prodserver.json  patch_rxjs_amd.js  postinstall-patches.js  protractor.conf.js  renovate.json
e2e/: BUILD.bazel  protractor.on-prepare.js
e2e/src/: app.e2e-spec.ts  app.po.ts
src/: BUILD  BUILD.bazel  app-routing.module.ts  app.component.html  app.component.ts  app.module.dev.ts  app.module.prod.ts  app.module.server.ts  app.module.ts  app.ts  home.ts  index.html  karma.conf.js  main.dev.server.ts  main.dev.ts  main.prod.ts  main.ts  polyfills.ts  rxjs_shims.js  styles.scss  test.ts  tsconfig-test.json  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
src/app/: BUILD.bazel  app-routing.module.ts  app.component.html  app.module.ts
src/app/billing/: BUILD.bazel  billing.module.ts
src/app/billing/index/: index.component.html  index.component.ts
src/app/billing/module0/: BUILD.bazel  module0.module.ts
src/app/billing/module1/: BUILD.bazel  module1.module.ts
src/app/billing/module2/: BUILD.bazel  module2.module.ts
src/app/billing/module3/: BUILD.bazel  module3.module.ts
src/app/billing/module4/: BUILD.bazel  module4.module.ts
src/app/billing/module5/: BUILD.bazel  module5.module.ts
src/app/billing/module6/: BUILD.bazel  module6.module.ts
src/app/billing/module7/: BUILD.bazel  module7.module.ts
src/app/billing/module8/: BUILD.bazel  module8.module.ts
src/app/billing/module9/: BUILD.bazel  module9.module.ts
src/app/compute/: BUILD.bazel  compute.module.ts
src/app/compute/index/: index.component.html
src/app/compute/module0/: BUILD.bazel  module0.module.ts
src/app/compute/module1/: BUILD.bazel  module1.module.ts
src/app/compute/module2/: BUILD.bazel  module2.module.ts
src/app/compute/module3/: BUILD.bazel  module3.module.ts
src/app/compute/module4/: BUILD.bazel  module4.module.ts
src/app/compute/module5/: BUILD.bazel  module5.module.ts
src/app/compute/module6/: BUILD.bazel  module6.module.ts
src/app/compute/module7/: BUILD.bazel  module7.module.ts
src/app/compute/module8/: BUILD.bazel  module8.module.ts
src/app/compute/module9/: BUILD.bazel  module9.module.ts
src/app/datastore/: BUILD.bazel  datastore.module.ts
src/app/datastore/index/: index.component.html
src/app/datastore/module0/: BUILD.bazel  module0.module.ts
src/app/datastore/module1/: BUILD.bazel  module1.module.ts
src/app/datastore/module2/: BUILD.bazel  module2.module.ts
src/app/datastore/module3/: BUILD.bazel  module3.module.ts
src/app/datastore/module4/: BUILD.bazel  module4.module.ts
src/app/datastore/module5/: BUILD.bazel  module5.module.ts
src/app/datastore/module6/: BUILD.bazel  module6.module.ts
src/app/datastore/module7/: BUILD.bazel  module7.module.ts
src/app/datastore/module8/: BUILD.bazel  module8.module.ts
src/app/datastore/module9/: BUILD.bazel  module9.module.ts
src/app/functions/: BUILD.bazel  functions.module.ts
src/app/functions/index/: index.component.html  index.component.spec.ts
src/app/functions/module0/: BUILD.bazel  module0.module.ts
src/app/functions/module1/: BUILD.bazel  module1.module.ts
src/app/functions/module2/: BUILD.bazel  module2.module.ts
src/app/functions/module3/: BUILD.bazel  module3.module.ts
src/app/functions/module4/: BUILD.bazel  module4.module.ts
src/app/functions/module5/: BUILD.bazel  module5.module.ts
src/app/functions/module6/: BUILD.bazel  module6.module.ts
src/app/functions/module7/: BUILD.bazel  module7.module.ts
src/app/functions/module8/: BUILD.bazel  module8.module.ts
src/app/functions/module9/: BUILD.bazel  module9.module.ts
src/app/hello-world/: BUILD.bazel  hello-world.component.spec.ts  hello-world.component.ts
src/app/home/: home.html
src/app/logging/: BUILD.bazel  logging.module.ts
src/app/logging/index/: index.component.html
src/app/logging/module0/: BUILD.bazel  module0.module.ts
src/app/logging/module1/: BUILD.bazel  module1.module.ts
src/app/logging/module2/: BUILD.bazel  module2.module.ts
src/app/logging/module3/: BUILD.bazel  module3.module.ts
src/app/logging/module4/: BUILD.bazel  module4.module.ts
src/app/logging/module5/: BUILD.bazel  module5.module.ts
src/app/logging/module6/: BUILD.bazel  module6.module.ts
src/app/logging/module7/: BUILD.bazel  module7.module.ts
src/app/logging/module8/: BUILD.bazel  module8.module.ts
src/app/logging/module9/: BUILD.bazel  module9.module.ts
src/app/monitoring/: BUILD.bazel  monitoring.module.ts
src/app/monitoring/index/: index.component.html
src/app/monitoring/module0/: BUILD.bazel  module0.module.ts
src/app/monitoring/module1/: BUILD.bazel  module1.module.ts
src/app/monitoring/module2/: BUILD.bazel  module2.module.ts
src/app/monitoring/module3/: BUILD.bazel  (+1 more)
src/app/networking/: BUILD.bazel  networking.module.ts
src/app/registry/: BUILD.bazel  registry.module.ts
src/app/storage/: BUILD.bazel  storage.module.ts
src/app/support/: BUILD.bazel  support.module.ts
src/assets/: BUILD.bazel  landing.css
src/hello-world/: BUILD  BUILD.bazel  hello-world.component.html  hello-world.component.scss  hello-world.component.spec.ts  hello-world.component.ts  hello-world.module.ts
src/images/: BUILD.bazel
src/lib/: BUILD.bazel  file.ts
src/material/: BUILD.bazel  material.module.ts
src/proto/: BUILD  service_pb.js  service_pb_service.js
src/reducers/: BUILD.bazel
src/shared/: BUILD
src/shared/material/: material.module.ts
src/styles/: BUILD  colors.scss  main.scss
src/todos/: BUILD.bazel  todos.component.html  todos.component.scss  todos.component.ts  todos.module.ts
tools/: BUILD.bazel  bazel.rc  defaults.bzl  docker.bazel.rc  generate.js
tools/generator/src/: build-file.js  clean.js  create-feature-module.js  generate.js  ng-module.js  ng.js  reference-components.js  utils.js
tools/sass/: BUILD.bazel  index.bzl  package.json
(+2261 files in other folders)
