load("@npm_angular_bazel//:index.bzl", "protractor_web_test_suite")
load("@npm_bazel_typescript//:defs.bzl", "ts_library")

ts_library(
    name = "e2e",
    testonly = 1,
    srcs = glob(["src/*.ts"]),
    tsconfig = "//src:tsconfig-test",
    deps = [
        "@npm//@types/jasmine",
        "@npm//jasmine",
        "@npm//protractor",
    ],
)

# The @npm//@angular/bazel npm dependency provides
# the @angular/bazel/protractor-utils
protractor_web_test_suite(
    name = "prodserver_test",
    data = [
        "@npm//@angular/bazel",
        "@npm//protractor",
        "@npm//zone.js",
    ],
    on_prepare = ":protractor.on-prepare.js",
    server = "//src:prodserver",
    deps = [":e2e"],
)

# The @npm//@angular/bazel npm dependency provides
# the @angular/bazel/protractor-utils
protractor_web_test_suite(
    name = "devserver_test",
    data = [
        "@npm//@angular/bazel",
        "@npm//protractor",
        "@npm//zone.js",
    ],
    on_prepare = ":protractor.on-prepare.js",
    server = "//src:devserver",
    deps = [":e2e"],
)
