load("@npm_angular_bazel//:index.bzl", "ng_module")

package(default_visibility = ["//:__subpackages__"])

# We don't import from these, but the generated ngfactory code will
NG_FACTORY_ADDED_IMPORTS = [
    "@npm//@angular/animations",
    "@npm//@angular/cdk",
    "@npm//@angular/material",
    "@npm//@angular/forms",
]

# This list is auto-updated by /tools/generator
# Make sure not to rename this variable
GENERATED_FEATURES = [
    "//src/app/billing",
    "//src/app/compute",
    "//src/app/datastore",
    "//src/app/functions",
    "//src/app/logging",
    "//src/app/monitoring",
    "//src/app/networking",
    "//src/app/registry",
    "//src/app/storage",
    "//src/app/support",
]

ng_module(
    name = "app",
    srcs = glob(["*.ts"]),
    assets = ["app.component.html"],
    tsconfig = "//src:tsconfig.json",
    deps = NG_FACTORY_ADDED_IMPORTS + GENERATED_FEATURES + [
        "//src/app/hello-world",
        "//src/app/home",
        "//src/app/todos",
        "//src/shared/material",
        "@npm//@angular/core",
        "@npm//@angular/router",
        "@npm//@angular/platform-browser",
        "@npm//@ngrx/store",
    ],
)
