load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

package(default_visibility = ["//visibility:public"])

sass_binary(
    name = "todos-styles",
    src = "todos.component.scss",
    deps = ["//src/styles:shared"],
)

ng_module(
    name = "todos",
    srcs = [
        "todos.component.ts",
        "todos.module.ts",
    ],
    assets = [
        "todos.component.html",
        ":todos-styles",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = [
        "//src/lib",
        "//src/material",
        "//src/reducers",
        "@angular//packages/common",
        "@angular//packages/core",
        "@angular//packages/forms",
        "@angular//packages/router",
        "@npm//@ngrx/store",
        "@rxjs",
    ],
)
