# Generated BUILD file, see /tools/generator
load("@npm_angular_bazel//:index.bzl", "ng_module")

package(default_visibility = ["//:__subpackages__"])

# We don't import from these, but the generated ngfactory code will
NG_FACTORY_ADDED_IMPORTS = [
    "@npm//@angular/cdk",
    "@npm//@angular/material",
    "@npm//@angular/forms",
]

ng_module(
    name = "billing",
    srcs = [
        "billing.module.ts",
        "index/index.component.ts",
    ],
    assets = [
        "index/index.component.html",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = NG_FACTORY_ADDED_IMPORTS + [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/router",
        "//src/app/billing/module0",
        "//src/app/billing/module1",
        "//src/app/billing/module2",
        "//src/app/billing/module3",
        "//src/app/billing/module4",
        "//src/app/billing/module5",
        "//src/app/billing/module6",
        "//src/app/billing/module7",
        "//src/app/billing/module8",
        "//src/app/billing/module9",
    ],
)
    