# Generated BUILD file, see /tools/generator
load("@npm_angular_bazel//:index.bzl", "ng_module")

package(default_visibility = ["//:__subpackages__"])

# We don't import from these, but the generated ngfactory code will
NG_FACTORY_ADDED_IMPORTS = [
    "@npm//@angular/cdk",
    "@npm//@angular/material",
    "@npm//@angular/forms",
]

ng_module(
    name = "compute",
    srcs = [
        "compute.module.ts",
        "index/index.component.ts",
    ],
    assets = [
        "index/index.component.html",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = NG_FACTORY_ADDED_IMPORTS + [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/router",
        "//src/app/compute/module0",
        "//src/app/compute/module1",
        "//src/app/compute/module2",
        "//src/app/compute/module3",
        "//src/app/compute/module4",
        "//src/app/compute/module5",
        "//src/app/compute/module6",
        "//src/app/compute/module7",
        "//src/app/compute/module8",
        "//src/app/compute/module9",
    ],
)
    