# Generated BUILD file, see /tools/generator
load("@npm_angular_bazel//:index.bzl", "ng_module")

package(default_visibility = ["//:__subpackages__"])

# We don't import from these, but the generated ngfactory code will
NG_FACTORY_ADDED_IMPORTS = [
    "@npm//@angular/cdk",
    "@npm//@angular/material",
    "@npm//@angular/forms",
]

ng_module(
    name = "datastore",
    srcs = [
        "datastore.module.ts",
        "index/index.component.ts",
    ],
    assets = [
        "index/index.component.html",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = NG_FACTORY_ADDED_IMPORTS + [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/router",
        "//src/app/datastore/module0",
        "//src/app/datastore/module1",
        "//src/app/datastore/module2",
        "//src/app/datastore/module3",
        "//src/app/datastore/module4",
        "//src/app/datastore/module5",
        "//src/app/datastore/module6",
        "//src/app/datastore/module7",
        "//src/app/datastore/module8",
        "//src/app/datastore/module9",
    ],
)
    