# Generated BUILD file, see /tools/generator
load("@npm_angular_bazel//:index.bzl", "ng_module")

package(default_visibility = ["//:__subpackages__"])

# We don't import from these, but the generated ngfactory code will
NG_FACTORY_ADDED_IMPORTS = [
    "@npm//@angular/cdk",
    "@npm//@angular/material",
    "@npm//@angular/forms",
]

ng_module(
    name = "functions",
    srcs = [
        "functions.module.ts",
        "index/index.component.ts",
    ],
    assets = [
        "index/index.component.html",
    ],
    tsconfig = "//src:tsconfig.json",
    deps = NG_FACTORY_ADDED_IMPORTS + [
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/router",
        "//src/app/functions/module0",
        "//src/app/functions/module1",
        "//src/app/functions/module2",
        "//src/app/functions/module3",
        "//src/app/functions/module4",
        "//src/app/functions/module5",
        "//src/app/functions/module6",
        "//src/app/functions/module7",
        "//src/app/functions/module8",
        "//src/app/functions/module9",
    ],
)
    